--- a/l10n/bundle.l10n.json
+++ b/l10n/bundle.l10n.json
@@ -1,28 +1,30 @@
 {
-  "envFileX.warning.envFileAndEnvFileX": "[envFileX] Detected both 'envFile' and 'envFileX' in launch.json. The final environment variables may be overridden. It is recommended to keep only 'envFileX' to avoid unexpected conflicts.",
-  "envFileX.log.splitLine": "-------------[envFileX]-------------",
-  "envFileX.log.startProcess": "Start processing debug configuration: {0}",
-  "envFileX.log.config": "envFileX config: {0}",
-  "envFileX.log.envFilesParsed": "Parsed envFiles: {0}, Has command script: {1}",
-  "envFileX.log.noCommandNoEnvFile": "Neither command nor envFile configured, skipping.",
-  "envFileX.log.onlyScript": "Only executing script content.",
-  "envFileX.log.scriptVars": "Script executed, got {0} environment variables.",
-  "envFileX.log.readEnvFile": "Reading env file: {0}",
-  "envFileX.log.mergeEnvFiles": "Merged {0} env files, total {1} environment variables.",
-  "envFileX.log.envAndScriptVars": "All envFile+command executed, total {0} environment variables.",
-  "envFileX.log.injected": "Injected environment variables: {0}",
-  "envFileX.log.error": "Error: {0}",
-  "envFileX.error.envFileNotExist": "Env file does not exist: {0}",
-  "envFileX.log.readFileContent": "Reading file content: {0}",
-  "envFileX.error.readEnvFile": "Failed to read env file: {0}",
-  "envFileX.log.winCmdFail": "Windows command failed: {0}",
-  "envFileX.log.cmdPath": "Command recognized as script path: {0}",
-  "envFileX.log.execCmd": "Executing command: {0}",
-  "envFileX.log.scriptSuccess": "Script executed successfully, parsing output.",
-  "envFileX.log.rmTmpFail": "Failed to remove temp script file: {0}",
-  "envFileX.log.execScriptFail": "Failed to execute script: {0}",
-  "envFileX.log.invalidLine": "Line {0} is not in KEY=VALUE format: {1}",
-  "envFileX.log.parseResult": "Parsed {0} lines, found {1} valid environment variables.",
-  "envFileX.log.deactivate": "envFileX extension deactivated.",
-  "envFileX.log.activated": "envFileX extension activated."
+  "[envFileX] Detected both 'envFile' and 'envFileX' in launch.json. The final environment variables may be overridden. It is recommended to keep only 'envFileX' to avoid unexpected conflicts.": "[envFileX] Detected both 'envFile' and 'envFileX' in launch.json. The final environment variables may be overridden. It is recommended to keep only 'envFileX' to avoid unexpected conflicts.",
+  "-------------[envFileX]-------------": "-------------[envFileX]-------------",
+  "Start processing debug configuration: {0}": "Start processing debug configuration: {0}",
+  "envFileX config: {0}": "envFileX config: {0}",
+  "Parsed envFiles: {0}, Has command script: {1}": "Parsed envFiles: {0}, Has command script: {1}",
+  "Neither command nor envFile configured, skipping.": "Neither command nor envFile configured, skipping.",
+  "Only executing script content.": "Only executing script content.",
+  "Script executed, got {0} environment variables.": "Script executed, got {0} environment variables.",
+  "Reading env file: {0}": "Reading env file: {0}",
+  "Merged {0} env files, total {1} environment variables.": "Merged {0} env files, total {1} environment variables.",
+  "All envFile+command executed, total {0} environment variables.": "All envFile+command executed, total {0} environment variables.",
+  "Injected environment variables: {0}": "Injected environment variables: {0}",
+  "Error: {0}": "Error: {0}",
+  "Env file does not exist: {0}": "Env file does not exist: {0}",
+  "Reading file content: {0}": "Reading file content: {0}",
+  "Failed to read env file: {0}": "Failed to read env file: {0}",
+  "Windows command failed: {0}": "Windows command failed: {0}",
+  "Command recognized as script path: {0}": "Command recognized as script path: {0}",
+  "Executing command: {0}": "Executing command: {0}",
+  "Script executed successfully, parsing output.": "Script executed successfully, parsing output.",
+  "Failed to remove temp script file: {0}": "Failed to remove temp script file: {0}",
+  "Failed to execute script: {0}": "Failed to execute script: {0}",
+  "Line {0} is not in KEY=VALUE format: {1}": "Line {0} is not in KEY=VALUE format: {1}",
+  "Parsed {0} lines, found {1} valid environment variables.": "Parsed {0} lines, found {1} valid environment variables.",
+  "envFileX extension deactivated.": "envFileX extension deactivated.",
+  "envFileX extension activated.": "envFileX extension activated.",
+  "yes": "yes",
+  "no": "no"
 }
