--- a/l10n/bundle.l10n.zh-cn.json
+++ b/l10n/bundle.l10n.zh-cn.json
@@ -1,28 +1,30 @@
 {
-  "envFileX.warning.envFileAndEnvFileX": "[envFileX] 检测到 launch.json 同时配置了 envFile 和 envFileX，最终环境变量可能会被覆盖，建议只保留 envFileX 字段，避免不可预期的变量冲突。",
-  "envFileX.log.splitLine": "-------------[envFileX]-------------",
-  "envFileX.log.startProcess": "开始处理调试配置: {0}",
-  "envFileX.log.config": "envFileX 配置: {0}",
-  "envFileX.log.envFilesParsed": "解析后的 envFiles: {0}, 有无命令脚本: {1}",
-  "envFileX.log.noCommandNoEnvFile": "未配置 command 和 envFile，不进行操作。",
-  "envFileX.log.onlyScript": "仅执行脚本内容。",
-  "envFileX.log.scriptVars": "脚本执行成功，获取到 {0} 个环境变量。",
-  "envFileX.log.readEnvFile": "读取环境变量文件: {0}",
-  "envFileX.log.mergeEnvFiles": "成功合并 {0} 个 env 文件，最终 {1} 个环境变量。",
-  "envFileX.log.envAndScriptVars": "所有 envFile+command 执行完毕，最终 {0} 个环境变量。",
-  "envFileX.log.injected": "成功注入环境变量: {0}",
-  "envFileX.log.error": "错误: {0}",
-  "envFileX.error.envFileNotExist": "环境变量文件不存在: {0}",
-  "envFileX.log.readFileContent": "读取文件内容: {0}",
-  "envFileX.error.readEnvFile": "无法读取环境变量文件: {0}",
-  "envFileX.log.winCmdFail": "Windows 命令执行失败: {0}",
-  "envFileX.log.cmdPath": "command 被识别为脚本路径: {0}",
-  "envFileX.log.execCmd": "执行命令: {0}",
-  "envFileX.log.scriptSuccess": "脚本执行成功，开始解析输出。",
-  "envFileX.log.rmTmpFail": "删除临时脚本文件失败: {0}",
-  "envFileX.log.execScriptFail": "执行脚本内容失败: {0}",
-  "envFileX.log.invalidLine": "第 {0} 行不符合 KEY=VALUE 格式: {1}",
-  "envFileX.log.parseResult": "解析了 {0} 行，找到 {1} 个有效的环境变量。",
-  "envFileX.log.deactivate": "envFileX 扩展已停用。",
-  "envFileX.log.activated": "envFileX 扩展已激活。"
+  "[envFileX] Detected both 'envFile' and 'envFileX' in launch.json. The final environment variables may be overridden. It is recommended to keep only 'envFileX' to avoid unexpected conflicts.": "[envFileX] 检测到 launch.json 同时配置了 envFile 和 envFileX，最终环境变量可能会被覆盖，建议只保留 envFileX 字段，避免不可预期的变量冲突。",
+  "-------------[envFileX]-------------": "-------------[envFileX]-------------",
+  "Start processing debug configuration: {0}": "开始处理调试配置: {0}",
+  "envFileX config: {0}": "envFileX 配置: {0}",
+  "Parsed envFiles: {0}, Has command script: {1}": "解析后的 envFiles: {0}, 有无命令脚本: {1}",
+  "Neither command nor envFile configured, skipping.": "未配置 command 和 envFile，不进行操作。",
+  "Only executing script content.": "仅执行脚本内容。",
+  "Script executed, got {0} environment variables.": "脚本执行成功，获取到 {0} 个环境变量。",
+  "Reading env file: {0}": "读取环境变量文件: {0}",
+  "Merged {0} env files, total {1} environment variables.": "成功合并 {0} 个 env 文件，最终 {1} 个环境变量。",
+  "All envFile+command executed, total {0} environment variables.": "所有 envFile+command 执行完毕，最终 {0} 个环境变量。",
+  "Injected environment variables: {0}": "成功注入环境变量: {0}",
+  "Error: {0}": "错误: {0}",
+  "Env file does not exist: {0}": "环境变量文件不存在: {0}",
+  "Reading file content: {0}": "读取文件内容: {0}",
+  "Failed to read env file: {0}": "无法读取环境变量文件: {0}",
+  "Windows command failed: {0}": "Windows 命令执行失败: {0}",
+  "Command recognized as script path: {0}": "command 被识别为脚本路径: {0}",
+  "Executing command: {0}": "执行命令: {0}",
+  "Script executed successfully, parsing output.": "脚本执行成功，开始解析输出。",
+  "Failed to remove temp script file: {0}": "删除临时脚本文件失败: {0}",
+  "Failed to execute script: {0}": "执行脚本内容失败: {0}",
+  "Line {0} is not in KEY=VALUE format: {1}": "第 {0} 行不符合 KEY=VALUE 格式: {1}",
+  "Parsed {0} lines, found {1} valid environment variables.": "解析了 {0} 行，找到 {1} 个有效的环境变量。",
+  "envFileX extension deactivated.": "envFileX 扩展已停用。",
+  "envFileX extension activated.": "envFileX 扩展已激活。",
+  "yes": "有",
+  "no": "无"
 }
